# lmc-local-scraper

./: .gitignore  LICENSE.txt  README.md  agent.py  emelin.csv  events.csv  events.pickle  gemini_api.py  made_art.csv  main.py  marlowe_artisinal_ales.py  producer.py  pyproject.toml  research.toml  scraper.py  script.txt  test_heygen_client.py  test_sora_client.py  test_veo_client.py  vom.csv
agentic_approach/: agent.py  emelin_agent.py  event_list_agent.py  flat_event_page_agent.py  gemini_event_research_agent.py  heygen_agent.py  research.toml  run_agents.py  script_writer.py  script_writer_agent.py  simplify_url.py  storyboard_agent.py
agentic_approach/prompts/: event_list_start.txt  event_list_update.txt  flat_events.txt  script_writer.txt
agents/: event_list_agent.py  film_agent.py  flat_event_page_agent.py  heygen_agent.py  heygen_client.py  script_writer_agent.py  sora_agent.py  storyboard_agent.py
assets/titles/: tag_bottom_left.html.jinja2
old/: emelin_agent.py  event.py  events.csv  events_rob.csv  scraper.py  village_of_mamaroneck.py
old/scrapers/: emelin_theater.py  larchmont_public_library.py  marlowe_artisinal_ales.py  village_of_mamaroneck.py
prompts/: event_list_start.txt  frame.txt  script_writer.txt
scrapers/: __init__.py  emelin_theater.py  larchmont_public_library.py  marlowe_artisinal_ales.py  sheldrake_center.py  town_of_mamaroneck.py  village_of_mamaroneck.py
tests/: test_gen_path_manager.py  test_humanize.py  test_producer_paths.py  test_prompt.py
titler/: output.webm  title_gen_chrome_driver.py  title_server.py  titler.py
(+63 files in other folders)
