[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fpdf2>=2.8.4",
    "google-genai>=1.30.0",
    "icalendar>=6.3.1",
    "lxml>=5.3.1",
    "markdownify>=1.2.0",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "pillow>=11.3.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "selenium>=4.35.0",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
]
